<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/LottieBubbles"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/bubbles"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/editText_emailLogin"
        app:layout_constraintEnd_toStartOf="@+id/textView_logo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chewy"
        android:text="@string/app_name"
        android:textColor="@color/brown_dark"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView_logo" />

    <EditText
        android:id="@+id/editText_emailLogin"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="6dp"
        android:hint="@string/str_emailLogin"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText_paxLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo" />

    <EditText
        android:id="@+id/editText_paxLogin"
        style="@style/editText"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="6dp"
        android:hint="@string/str_paxLogin"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_emailLogin" />

    <Button
        android:id="@+id/button_register"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_btnRegister"
        android:onClick="openRegister"
        app:layout_constraintBottom_toBottomOf="@+id/button_login"
        app:layout_constraintEnd_toStartOf="@id/button_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/editText_paxLogin"
        app:layout_constraintTop_toTopOf="@+id/button_login" />

    <Button
        android:id="@+id/button_login"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_btnLogin"
        android:onClick="checkLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText_paxLogin"
        app:layout_constraintStart_toEndOf="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/editText_paxLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>