<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context=".LearnFragment.LearnLambicFragment" >
    <TextView
        android:id="@+id/PercorsoLambicType"
        style="@style/Normaltext"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="@color/brown_dark" />

    <TextView
        android:id="@+id/TitleLambicType"
        style="@style/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/yellow_dark" />

    <TextView
        android:id="@+id/SubtitleLambicType"
        style="@style/Normaltext"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:text="@string/LambicBeerSubtitle"
        android:textColor="@color/brown_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textLambicType"
            style="@style/Normaltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/LambicBeerDesc" />

    </ScrollView>

    <TextView
        android:id="@+id/textCategory"
        style="@style/Normaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:text="@string/Categorie"
        android:textSize="20sp"
        android:textColor="@color/brown_dark"/>

    <ListView
        android:id="@+id/ListLambicType"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="14dp">

    </ListView>

</LinearLayout>